// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToolTip anchor props are rendered 1`] = `
<body
  class=""
>
  <div>
    <span
      class="euiToolTipAnchor customAnchorClass1 emotion-euiToolTipAnchor-inlineBlock"
      data-test-subj="DTS"
    >
      <button>
        Trigger
      </button>
    </span>
  </div>
</body>
`;

exports[`EuiToolTip display prop renders block 1`] = `
<div>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
  >
    <button>
      Trigger
    </button>
  </span>
</div>
`;

exports[`EuiToolTip is rendered 1`] = `
<body
  class=""
>
  <div>
    <span
      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
    >
      <button>
        Trigger
      </button>
    </span>
  </div>
</body>
`;

exports[`EuiToolTip shows tooltip on mouseover and focus 1`] = `
<body
  class="euiBody-hasPortalContent"
>
  <div>
    <span
      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
    >
      <button
        aria-describedby="id"
        data-test-subj="trigger"
      >
        Trigger
      </button>
    </span>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      aria-label="aria-label"
      class="euiToolTipPopover euiToolTip testClass1 testClass2 emotion-euiToolTip-top-euiTestCss"
      data-position="top"
      data-test-subj="test subject string"
      id="id"
      position="top"
      role="tooltip"
      style="top: -16px; left: -10px;"
    >
      <div
        class="euiToolTip__title emotion-euiToolTip__title"
      >
        title
      </div>
      <div
        class="euiToolTip__arrow emotion-euiToolTip__arrow-top"
        style="left: 4px; top: 0px;"
      />
      <div>
        content
      </div>
    </div>
  </div>
</body>
`;
